CICO-34734: Changed params to API

--- a/rover/partials/reports/filters/rvReportDetailsFilters.html
+++ b/rover/partials/reports/filters/rvReportDetailsFilters.html
@@ -456,7 +456,7 @@
 
         <!--item_46 -->
         <a href="" class="settings-title toggle has-arrow" ng-show="chosenReport.hasIncludeAgingBalance && chosenReport.hasIncludeAgingBalance.data.length" ng-class="{'active': filterItemsToggle.item_46}" ng-click="toggleFilterItems('item_46')">
-            <span class="title">Completion Status</span>
+            <span class="title">Aging Balance</span>
         </a>
         <div class="report-col settings-content" ng-show="chosenReport.hasIncludeAgingBalance && chosenReport.hasIncludeAgingBalance.data.length" ng-class="{ 'hidden': !filterItemsToggle.item_46 }">
             <multi-option-selection ng-show="chosenReport.hasIncludeAgingBalance && chosenReport.hasIncludeAgingBalance.data.length"
