CICO-36466 Auto save endpoint changes and refresh the authorization status

--- a/admin/partials/ExactOnline/setup/adExactOnlineSetup.html
+++ b/admin/partials/ExactOnline/setup/adExactOnlineSetup.html
@@ -17,6 +17,7 @@
                 <ad-dropdown-name savemodel="exactOnlineSetup.endpoint"
                                   valueproperty="endpoint"
                                   property="description"
+                                  change-handler="onURLChange"
                                   list="endPoints"
                                   label="{{'ENDPOINT'| translate}}"
                                   div-class="full-width"
