CICO-36186, fix for toggle not working in some cases.

--- a/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
+++ b/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
@@ -55,8 +55,8 @@ is_ledger
 <tr ng-repeat="item in cgEntries track by $index"
   ng-class="{
     'charge-group': item.isChargeGroup,
-    'toggle': item.isChargeGroup,
-    'active': item.isChageGroupActive,
+    'toggle': item.isChargeGroup ,
+    'active': item.isChargeGroupActive,
 
     'charge-code': item.isChargeCode,
     'charge-pagination': item.isChargeCodePagination,
