--- a/rover/partials/reports/aging/reportRow.html
+++ b/rover/partials/reports/aging/reportRow.html
@@ -2,7 +2,7 @@
     <td class="name">
         <strong>{{item.account_name}}</strong>
     </td>
-    <td>{{item.account_no}}</td>
+    <td>{{item.ar_number}}</td>
     <td>{{item.0_30}} </td>
     <td>{{item.31_60}}</td>
     <td>{{item.61_90}}</td>
