CICO-35422 updated the layout params

--- a/admin/partials/snapshotSetup/adSnapshotSetup.html
+++ b/admin/partials/snapshotSetup/adSnapshotSetup.html
@@ -33,7 +33,7 @@
                             <span class="icon-form icon-radio " ng-class="{checked:snapshotData.incremental_export_option=='once'}"></span>
                             <input type="radio" value="once" ng-model="snapshotData.incremental_export_option"> {{ 'ONCE_PER_DAY_LABEL' | translate}}
                         </label>
-                <fieldset class="holder left holder_margin">
+                <fieldset class="holder left holder_margin" ng-show="snapshotData.incremental_export_option=='once'">
                     <div class="entry full-width increental-export-time-margin">
                         <label>
                             {{ 'START_TIME_LABEL' | translate}}
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </fieldset>
-                <fieldset class="holder right holder_margin">
+                <fieldset class="holder right holder_margin" ng-show="snapshotData.incremental_export_option=='once'">
                     <div class="entry ">
                         <label>
                             {{ 'RETRY_INTERVAL_LABEL' | translate}}
@@ -88,7 +88,7 @@
                             <input type="radio" value="multiple" ng-model="snapshotData.incremental_export_option"> {{ 'MULTIPLE_PER_DAY_LABEL' | translate}}
                         </label>
 
-                <fieldset class="holder left holder_margin">
+                <fieldset class="holder left holder_margin" ng-show="snapshotData.incremental_export_option=='multiple'">
                     <div class="entry full-width increental-export-time-margin">
                         <label>
                             {{ 'START_FIRST_EXPORT_LABEL' | translate}}
