CICO-34734: Label changed to accounts

--- a/rover/partials/reports/filters/rvReportDetailsFilters.html
+++ b/rover/partials/reports/filters/rvReportDetailsFilters.html
@@ -471,7 +471,7 @@
             <span class="title">Accounts</span>
         </a>
         <div class="report-col settings-content" ng-show="chosenReport.hasAccountSearch && chosenReport.hasAccountSearch.data.length" ng-class="{ 'hidden': !filterItemsToggle.item_47 }">
-            <multi-option-selection label="Guarantee Type(s)"
+            <multi-option-selection label="Account Name"
                 on-update="refreshSidebarScroll"
                 data="chosenReport.hasAccountSearch.data"
                 options="chosenReport.hasAccountSearch.options"></multi-option-selection>
