--- a/admin/partials/snapshotSetup/adSnapshotSetup.html
+++ b/admin/partials/snapshotSetup/adSnapshotSetup.html
@@ -29,6 +29,7 @@
                     
                 </fieldset>
                 <ad-form-title full-width="true" form-title="{{'INCREMENTAL_EXPORT_LABEL' | translate}}"></ad-form-title>
+                <ad-toggle-button is-checked="snapshotData.incremental_export_enabled" label="{{'INCREMENTAL_EXPORT_SWITCH_LABEL'| translate}}"></ad-toggle-button>
                     <label class="radio" ng-class="{'checked':snapshotData.incremental_export_option== 'once'}">
                             <span class="icon-form icon-radio " ng-class="{checked:snapshotData.incremental_export_option=='once'}"></span>
                             <input type="radio" value="once" ng-model="snapshotData.incremental_export_option"> {{ 'ONCE_PER_DAY_LABEL' | translate}}
