--- a/rover/partials/reports/dailyProduction/rvDailyProductionRoomTypeReport.html
+++ b/rover/partials/reports/dailyProduction/rvDailyProductionRoomTypeReport.html
@@ -8,7 +8,7 @@
 </div>
 
 <!-- <div ng-hide="hasNoResults" -->
-<div ng-hide="hasNoResults" id="report-content" class="report-content statistics" ng-controller="RVDailyProdRoomTypeReportCtrl">
+<div ng-hide="hasNoResults" id="report-content" class="report-content statistics" ng-controller="RVDailyProdRoomTypeReport.Controller">
 
     <!-- Left side - table legend. Number of list items here should be identical to the number of table rows on the right side  -->
     <div class="statistics-headings">
