CICO-36182: fixed broken row issue

--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -1987,6 +1987,10 @@
 
                             &.day-end { border-right: 1px solid @grey4; }
 
+                            strong, em, span {
+                                .nowrap();
+                            }
+
                             strong {font-weight: 600;}
 
                             &:last-child { border-right-width: 0; }
