--- a/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
+++ b/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
@@ -67,8 +67,8 @@ is_ledger
   }"
   ng-hide="isHidden(item)"
 >
-  <td ng-if="item.isChargeCodePagination" colspan="8">
-    <rv-pagination page-options="item.pageOptions"></rv-pagination>
+  <td ng-show="item.isChargeCodePagination" colspan="8">
+    <rv-pagination page-options="item.pageOptions" page-data="item.pageOptions.totalCount"></rv-pagination>
   </td>
 
 	<td ng-if="!item.isChargeCodePagination && item.isChargeGroup"
