--- a/rover/partials/housekeeping/popups/roomTab/rvRoomTabReservationExist.html
+++ b/rover/partials/housekeeping/popups/roomTab/rvRoomTabReservationExist.html
@@ -6,7 +6,7 @@
 	    <span class="h2 message">Please move reservation to another room.</span>
 	    <span class="text">For the selected date / time room is assigned to Reservation for:</span>
 	    <p class="guest" ng-repeat="reservation in ngDialogData.reservations">
-			<strong ng-if="reservation.last_name || reservation.first_name">{{reservation.last_name}}, {{reservation.first_name}}</strong>
+	    	<strong>{{reservation.last_name}}, {{reservation.first_name}}</strong>
 	    	Reservation #<em>{{reservation.confirm_no}}</em>
 	    </p>
 
