--- a/admin/partials/zestStation/adZestStationCfg.html
+++ b/admin/partials/zestStation/adZestStationCfg.html
@@ -197,6 +197,12 @@
                 </div>
 
             </fieldset>
+               <fieldset class="holder left">
+                <div class="form-title full-width">
+                    <h3><span translate>ZEST_STATION_OUT_OF_ORDER_TRESHOLD</span> </h3>
+                </div>
+                <ad-textbox value="zestSettings.kiosk_out_of_order_treshold" name="zest-web" id="zest-web" label="{{'ZEST_STATION_OUT_OF_ORDER_TRESHOLD'| translate}}" placeholder="" styleclass="full-width"></ad-textbox>
+            </fieldset>
             <div class="actions float">
                 <button type="button" id="cancel" class="button blank add-data-inline" ng-click="goBackToPreviousState()" translate>
                     CANCEL
