CICO-36587 - Style update

--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -1921,7 +1921,7 @@
             }
 
             &.statistics-reports {
-                table-layout: fixed;
+                table-layout: auto;
                 border-collapse: collapse;
                 border-spacing: 0;
 
@@ -1930,6 +1930,7 @@
                     td {
                         line-height: 30px;
                         padding: 0 10px;
+                        min-width: 80px;
                     }
                 }
 
