--- a/stylesheets/less/app/04_layout.less
+++ b/stylesheets/less/app/04_layout.less
@@ -499,6 +499,22 @@ body { overflow: hidden; }
 ==========================================================*/
 
 /* Scrollable content 		==============================*/
+
+	::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+        background-color: transparent;
+    }
+     
+    ::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+     
+    ::-webkit-scrollbar-thumb {
+        background-color: @logoPrimary;
+        #border-radius > .rounded(25px);
+    }
+
 	.scrollable {
 		width: 100%;
 		overflow: hidden;
@@ -524,6 +540,25 @@ body { overflow: hidden; }
 			-o-transform: translateZ(0);
 			transform: translateZ(0);
 		}
+	}
+
+	[class*="scroll-"] {
+	    -webkit-overflow-scrolling: touch;
+	}
+
+	.scroll-vertical {
+	    overflow-x: hidden;
+	    overflow-y: auto !important;
+	}
+
+	.scroll-horizontal {
+	    overflow-x: auto !important;
+	    overflow-y: hidden;
+	}
+
+	.scroll-both {
+	    overflow-x: auto !important;
+	    overflow-y: auto !important;
 	}
 
 /* Search bar				==============================*/
