--- a/guestweb/common_css/covington/theme.less
+++ b/guestweb/common_css/covington/theme.less
@@ -7,6 +7,7 @@ html,body{
 }
 body{
      background-color: #FDFDFD;
+     font-family: 'Nimbus Roman';
 }
 .back-text{
     color:#5d4f45 !important;
@@ -101,7 +102,9 @@ textarea.sub-text, textarea.sub-text:hover{
 }
 
 /*----------------- date picker -------------------------*/
-
+.pickadate {
+   font-family: 'Nimbus Roman';
+}
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
   color: #363634;
   color: transparent;
