--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -64,3 +64,11 @@ font-family: 'Avenir Light';
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+    font-family: 'Nimbus Roman';
+    src: url('/assets/type/nimbus_roman/NimbusRomD-Reg.otf');
+    src: url('/assets/type/nimbus_roman/NimbusRomD-Reg.eot?#iefix') format('embedded-opentype'), url('/assets/type/nimbus_roman/NimbusRomD-Reg.woff') format('woff'), url('/assets/type/nimbus_roman/NimbusRomD-Reg.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
