CICO-35998 Added custom font :Proxima Nova

--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -64,3 +64,13 @@ font-family: 'Avenir Light';
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+font-family: 'Proxima Nova';
+	src: url('/assets/type/Proxima_Nova/ProximaNova-Regular.eot');
+	src: url('/assets/type/Proxima_Nova/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
+	 url('/assets/type/Proxima_Nova/ProximaNova-Regular.woff') format('woff'), 
+	 url('/assets/type/Proxima_Nova/ProximaNova-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
