--- a/guestweb/common_css/ponchartrain/theme.less
+++ b/guestweb/common_css/ponchartrain/theme.less
@@ -7,6 +7,7 @@ html,body{
 }
 body{
      background-color: #EDEDED;
+     font-family: 'Proxima Nova';
 }
 .back-text{
     color:#6A6A6A !important;
@@ -97,7 +98,9 @@ textarea.sub-text, textarea.sub-text:hover{
 }
 
 /*----------------- date picker -------------------------*/
-
+.pickadate-cell{
+  font-family: 'Proxima Nova';
+}
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
   color: #363634;
   color: transparent;
