CICO-32828 api integration

--- a/admin/partials/zestStation/adZestStationCheckin.html
+++ b/admin/partials/zestStation/adZestStationCheckin.html
@@ -104,7 +104,7 @@
                 <div class="form-title full-width">
                     <h3><span translate>USE_ADD_REMOVE_GUESTS </span> </h3>
                 </div>
-                <ad-toggle-button is-checked="zestSettings.add_remove_guests" label="{{'USE_ADD_REMOVE_GUESTS'| translate}}" div-class="full-width"></ad-toggle-button>
+                <ad-toggle-button is-checked="zestSettings.kiosk_add_remove_guests" label="{{'USE_ADD_REMOVE_GUESTS'| translate}}" div-class="full-width"></ad-toggle-button>
             </fieldset>
 
 
