--- a/rover/partials/diary/rvDiaryMessages.html
+++ b/rover/partials/diary/rvDiaryMessages.html
@@ -1,6 +1,6 @@
 <div role="dialog" id="modal" class="modal-show" ng-class="{'modal-show': !modalClosing}"> <!--modal-content diary-move -->
   <div ng-cloak class="modal-content">
-	    <button id="modal-close" type="button" class="modal-close" ng-click="closeDialog()">
+	    <button id="modal-close" type="button" class="modal-close" ng-click="exitPopup()">
 	    	<span class="icons icon-close invert">
 	    </button>
 		<span class="h2 message">
