--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1413,13 +1413,18 @@
 .ui-icon {
     text-indent: 0px !important; 
 }
+
 .demo-text{
     float: right;
     left: 0;
     position: absolute;
     color: #d8d8d8;
     z-index: 999;
+    &.editor{
+        left:45% !important;
+    }
 }
+
 
 
 .timer-debugger-left{
